Name:               polar
Version:            0.1.0
Synopsis:           Complex numbers in polar form
Description:        Complex numbers in polar form
License:            BSD3
License-File:       LICENSE
Category:           Math
Copyright:          Copyright (c) Stefan Kersten 2008-2010
Author:             Stefan Kersten
Maintainer:         Stefan Kersten <sk@xdv.org>
Stability:          provisional
Homepage:           http://space.k-hornz.de/polar
Bug-Reports:        http://github.com/kaoskorobase/polar/issues/
Tested-With:        GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.2
Build-Type:         Simple
Cabal-Version:      >= 1.8

Library
  Exposed-Modules:  Data.Complex.Polar
  Build-Depends:    base >= 3 && < 5

Source-Repository head
    Type:               git
    Location:           git://github.com/kaoskorobase/polar.git

test-suite polar-test
  Type:             exitcode-stdio-1.0
  Main-Is:          Main.hs
  Hs-Source-Dirs:   test
  Build-Depends:    base >= 3 && < 5,
                    HUnit >= 1.6 && < 1.7,
                    polar
